--- a/package.json
+++ b/package.json
@@ -11,7 +11,31 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-native": "0.74.5",
+    "react-native-easy-toast": "^2.3.0",
+    "react-native-gesture-handler": "^2.18.1",
+    "react-native-modalize": "^2.1.1",
+    "react-native-portalize": "^1.0.7",
+    "react-native-safe-area-context": "^4.10.8",
+    "react-native-screens": "^3.34.0",
+    "react-native-splash-screen": "^3.3.0",
+    "react-native-svg": "^15.5.0",
+    "react-native-toast-message": "^2.2.0",
+    "react-native-uuid": "^2.0.2",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^3.1.0",
+    "@notifee/react-native": "^7.8.2",
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-community/netinfo": "^11.3.2",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "@react-navigation/stack": "^6.4.1",
+    "@reduxjs/toolkit": "^2.2.7",
+    "apisauce": "^3.0.1",
+    "axios": "^1.7.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
